# procyon

./: .atom-build.json  .gitignore  CMakeLists.txt  procyon.todo
Assets/: font.frag  font.vert  primitive.frag  primitive.vert  quadbatch.frag  quadbatch.vert  shader2.frag
Assets/maps/: big.xml  full.xml  georgia.xml  map.xml  map2.xml  map3.xml  map4.xml  map7.xml  objects.xml  small.xml  windows.xml
Assets/shaders/: line.frag  line.vert  polygon.frag  polygon.vert  primitive.frag  primitive.vert  quadbatch.frag  quadbatch.vert  shader.frag  shader.vert  shape.vert
cmake/: FindBox2D.cmake  FindDirectX.cmake  FindEvDev.cmake  FindLogog.cmake  FindUDev.cmake
editor/: CMakeLists.txt  Editor.cpp  Editor.h  EditorAssets.cpp  EditorAssets.h  EditorSettings.cpp  EditorSettings.h  Grid.cpp  Grid.h  LogOutputTarget.cpp  LogOutputTarget.h  MapDocument.cpp  MapDocument.h  MapDocumentCommands.h  NewMapDialog.cpp  NewMapDialog.h  PrefsDialog.cpp  PrefsDialog.h  ProcyonCanvas.cpp  ProcyonCanvas.h  ProcyonQtUtil.cpp  ProcyonQtUtil.h  ProcyonQtUtil.inl  RecentFileList.cpp  RecentFileList.h  SceneObject.cpp  SceneObject.h  SpriteSheetViewerCanvas.cpp  SpriteSheetViewerCanvas.h  SpriteSheetViewerWindow.cpp  SpriteSheetViewerWindow.h  editor.cpp  editor.h  editor.ui  editor_main.cpp  editor_resources.qrc  main.cpp  new_map_dialog.ui  prefs_dialog.ui  qsfmlcanvas.cpp  (+2 more)
editor/QPropertyBrowser/: CMakeLists.txt
editor/resources/: README.txt
examples/Box2dWorld/: Box2dWorld.cpp  CMakeLists.txt  SpinningBox.h
examples/Sandbox/: AnimatedSprite.cpp  AnimatedSprite.h  CMakeLists.txt  CustomSprites.h  Player.cpp  Player.h  PolyLine.cpp  PolyLine.h  Sandbox.cpp  Sandbox.h  SandboxAssets.cpp  SandboxAssets.h  XmlMap.cpp  XmlMap.h  main.cpp
lib/QPropertyBrowser/: CMakeLists.txt
lib/logog/include/: thread.hpp
lib/stb/: stb.c
lib/vaserenderer/: CMakeLists.txt  agg_curve4.cpp  curve.cpp  opengl.cpp  vaser.cpp  vaser.h
src/: Aabb.h  CMakeLists.txt  Console.cpp  Image.cpp  Image.h  Logging.h  Macros.h  MainLoop.cpp  MainLoop.h  ProcyonCommon.h  Rect.h  Transformable.cpp  Transformable.h  logging.h  main.cpp  reflection.cpp  reflection.h
src/Audio/: AudioDevice.cpp  AudioDevice.h  CMakeLists.txt  ProcyonAL.h  Sound.cpp  Sound.h  SoundBuffer.cpp  SoundBuffer.h  SoundFile.cpp  SoundFile.h
src/Audio/PortAudio/: AudioDevice.cpp  AudioDevice.h
src/Collision/: CMakeLists.txt  Contact.h  World.cpp  World.h
src/Common/: CMakeLists.txt  Image.cpp  Image.h  Ioc.cpp  Ioc.h  Ioc.inl  ProcyonCommon.h  Reflection.cpp  Reflection.h
src/Engine/: CMakeLists.txt  Console.cpp  Console.h  MainLoop.cpp  MainLoop.h
src/Graphics/: AnimatedSprite.cpp  AnimatedSprite.h  CMakeLists.txt  Camera.cpp  Camera.h  FontFace.cpp  FontFace.h  FontRenderer.cpp  FontRenderer.h  LineShape.cpp  LineShape.h  Quad.cpp  Quad.h  RectShape.cpp  RectShape.h  RenderContext.cpp  RenderContext.h  RenderCore.cpp  RenderCore.h  Renderable.h  Renderer.cpp  Renderer.h  Shape.cpp  Shape.h  ShapeRenderer.cpp  ShapeRenderer.h  Sprite.cpp  Sprite.h  SpriteRenderer.cpp  SpriteRenderer.h  Text.cpp  Text.h  Texture.h
src/Graphics/DirectX/: CMakeLists.txt  GraphicsPlatform.h
src/Graphics/GL/: CMakeLists.txt  GLBuffer.cpp  GLBuffer.h  GLContext.cpp  GLContext.h  GLGeometry.cpp  GLGeometry.h  GLMaterial.cpp  GLMaterial.h  GLProgram.cpp  GLProgram.h  GLRenderCore.cpp  GLRenderCore.h  GLShader.cpp  GLShader.h  GLTexture.cpp  GLTexture.h  GraphicsPlatform.h  ProcyonGL.h  ProcyonVaser.cpp  ProcyonVaser.h  Vaser.cpp  Vaser.h
src/Platform/: CMakeLists.txt  Joystick.cpp  Joystick.h  KeyCodes.cpp  KeyCodes.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h  Platform.h  PlatformInput.h  Window.cpp  Window.h
src/Platform/Unix/: CMakeLists.txt  UnixJoystick.cpp  UnixJoystick.h  X11GLContext.cpp  X11GLContext.h  X11Window.cpp  X11Window.h
src/Platform/Win32/: CMakeLists.txt  Platform.cpp  PlatformInput.cpp  Win32GLContext.cpp  Win32GLContext.h  Win32Window.cpp  Win32Window.h
src/Platform/X11/: CMakeLists.txt  Platform.cpp  PlatformInput.cpp  UnixJoystick.cpp  UnixJoystick.h  X11GLContext.cpp  X11Platform.h  X11Window.cpp  X11Window.h
tests/: CMakeLists.txt  ioc_test.cpp  reflection_test.cpp  test_base.h  test_main.cpp
