# OpenAl audio library
if ( PROCYON_VS )
	set( OPENAL_INCLUDE_DIR "${PROCYON_THIRDPARTY_ROOT}openal-1.1/include" )
	set( OPENAL_LIBRARY "${PROCYON_THIRDPARTY_ROOT}openal-1.1/lib/vs110/x64/OpenAL32.lib" )
else()
	find_package( OpenAL REQUIRED )
endif()

# SndFile audio file import library
if ( PROCYON_VS )
	set( SNDFILE_INCLUDE_DIRS "${PROCYON_THIRDPARTY_ROOT}libsndfile/include" )
	set( SNDFILE_LIBRARIES "${PROCYON_THIRDPARTY_ROOT}libsndfile/lib/vs110/x64/libsndfile-1.lib" )
else()
	find_package( SndFile REQUIRED )
endif()

set( PROCYON_SRCS
	${PROCYON_SRCS}
	${CMAKE_CURRENT_SOURCE_DIR}/ProcyonAL.h
	${CMAKE_CURRENT_SOURCE_DIR}/AudioDevice.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/AudioDevice.h
	${CMAKE_CURRENT_SOURCE_DIR}/SoundFile.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/SoundFile.h
	${CMAKE_CURRENT_SOURCE_DIR}/Sound.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Sound.h
	${CMAKE_CURRENT_SOURCE_DIR}/SoundBuffer.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/SoundBuffer.h
	PARENT_SCOPE
)

set( PROCYON_INCLUDES
	${PROCYON_INCLUDES}
	${OPENAL_INCLUDE_DIR}
	${SNDFILE_INCLUDE_DIRS}
	PARENT_SCOPE
)

set( PROCYON_LIBS
	${PROCYON_LIBS}
	${OPENAL_LIBRARY}
	${SNDFILE_LIBRARIES}
	PARENT_SCOPE
)
