
if ( PROCYON_VS )
	set( FREETYPE_INCLUDE_DIRS "${PROCYON_THIRDPARTY_ROOT}freetype-2.6.5/include" )
	set( FREETYPE_LIBRARIES "${PROCYON_THIRDPARTY_ROOT}freetype-2.6.5/lib/vs110/x64/freetype.lib" )
else()
	find_package( Freetype REQUIRED )
endif()

if ( PROCYON_GL )
	add_subdirectory( GL/ )
elseif ( PROCYON_DIRECTX )
	add_subdirectory( DirectX/ )
endif ()

set( PROCYON_SRCS
	${PROCYON_SRCS}
	${CMAKE_CURRENT_SOURCE_DIR}/Camera.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Camera.h
	${CMAKE_CURRENT_SOURCE_DIR}/Sprite.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Sprite.h
	${CMAKE_CURRENT_SOURCE_DIR}/Shape.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Shape.h
	${CMAKE_CURRENT_SOURCE_DIR}/FontFace.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/FontFace.h
	${CMAKE_CURRENT_SOURCE_DIR}/Renderer.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Renderer.h
	${CMAKE_CURRENT_SOURCE_DIR}/Text.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Text.h
	${CMAKE_CURRENT_SOURCE_DIR}/Texture.h
	${CMAKE_CURRENT_SOURCE_DIR}/RenderCore.h
	${CMAKE_CURRENT_SOURCE_DIR}/Renderable.h
	PARENT_SCOPE
)

set( PROCYON_INCLUDES
	${PROCYON_INCLUDES}
	${FREETYPE_INCLUDE_DIRS}
	${VASERENDERER_INCLUDE_DIR}
	PARENT_SCOPE
)
set( PROCYON_LIBS
	${PROCYON_LIBS}
	${FREETYPE_LIBRARIES}
	PARENT_SCOPE
)
set( PROCYON_DEFINITIONS
	${PROCYON_DEFINITIONS}
	PARENT_SCOPE
)
