
if ( PROCYON_LINUX )
	add_subdirectory( X11/ )
else()
	add_subdirectory( Win32/ )
endif()

set( PROCYON_SRCS
	${PROCYON_SRCS}
	${CMAKE_CURRENT_SOURCE_DIR}/Window.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Window.h
	${CMAKE_CURRENT_SOURCE_DIR}/Joystick.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Joystick.h
	${CMAKE_CURRENT_SOURCE_DIR}/KeyCodes.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/KeyCodes.h
	${CMAKE_CURRENT_SOURCE_DIR}/Keyboard.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Keyboard.h
	${CMAKE_CURRENT_SOURCE_DIR}/Mouse.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Mouse.h
	${CMAKE_CURRENT_SOURCE_DIR}/PlatformInput.h
	PARENT_SCOPE
)

set( PROCYON_INCLUDES ${PROCYON_INCLUDES} PARENT_SCOPE )
set( PROCYON_LIBS ${PROCYON_LIBS} PARENT_SCOPE )
set( PROCYON_DEFINITIONS ${PROCYON_DEFINITIONS} PARENT_SCOPE )
