# DIRECTX NOT YET IMPLEMENTED

# CMakeLists.txt DirectX source files
find_package( DirectX REQUIRED )

#list( APPEND PROCYON_GRAPHICS_DEFINITIONS )

set( PROCYON_GRAPHICS_SRC_FILES
	${PROCYON_GRAPHICS_SRC_FILES}
	PARENT_SCOPE )

set( PROCYON_GRAPHICS_INCLUDE_DIRS
	${PROCYON_GRAPHICS_INCLUDE_DIRS}
	${DirectX_D3D11_INCLUDE_DIR}
	${CMAKE_CURRENT_SOURCE_DIR}
	PARENT_SCOPE )

#list( APPEND PROCYON_GRAPHICS_LIBRARIES  )
