# DIRECTX NOT YET IMPLEMENTED

# CMakeLists.txt DirectX source files
find_package( DirectX REQUIRED )

#list( APPEND PROCYON_GRAPHICS_DEFINITIONS )

set( PROCYON_SRCS
	${PROCYON_SRCS}
	PARENT_SCOPE )

set( PROCYON_INCLUDES
	${PROCYON_INCLUDES}
	${DirectX_D3D11_INCLUDE_DIR}
	PARENT_SCOPE )

#list( APPEND PROCYON_GRAPHICS_LIBRARIES  )
