# CMakeLists.txt GL source files
find_package( OpenGL REQUIRED )

if ( PROCYON_VS )
	set( GLEW_INCLUDE_DIR "${PROCYON_THIRDPARTY_ROOT}glew-1.13.0/include" )
	set( GLEW_LIBRARIES "${PROCYON_THIRDPARTY_ROOT}glew-1.13.0/lib/Release/x64/glew32s.lib" )
else()
	find_package( GLEW REQUIRED )
endif()

set( PROCYON_GRAPHICS_DEFINITIONS
	${PROCYON_GRAPHICS_DEFINITIONS}
	-DGLEW_STATIC
	PARENT_SCOPE )

set( PROCYON_GRAPHICS_SRC_FILES
	${PROCYON_GRAPHICS_SRC_FILES}
	${CMAKE_CURRENT_SOURCE_DIR}/GLTexture.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/GLShader.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/GLProgram.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/GLBuffer.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/GLGeometry.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/GLMaterial.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/GLContext.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/GLRenderCore.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/ProcyonVaser.cpp
	PARENT_SCOPE )

set( PROCYON_GRAPHICS_INCLUDE_DIRS
	${PROCYON_GRAPHICS_INCLUDE_DIRS}
	${CMAKE_CURRENT_SOURCE_DIR}
	${OPENGL_INCLUDE_DIR}
	${GLEW_INCLUDE_DIR}
	PARENT_SCOPE )

set( PROCYON_GRAPHICS_LIBRARIES
	${PROCYON_GRAPHICS_LIBRARIES}
	${OPENGL_LIBRARIES}
	${GLEW_LIBRARIES}
	PARENT_SCOPE )
