# Logog Static Library
# https://github.com/johnwbyrd/logog.git
if ( PROCYON_VS )
	set( GLFW_INCLUDE_DIRS "${PROCYON_THIRDPARTY_ROOT}glfw-3.2/include" )
	set( GLFW_LIBRARY "${PROCYON_THIRDPARTY_ROOT}glfw-3.2/lib/vs110/x64/glfw3.lib")
else()
	find_package( GLFW REQUIRED )
endif()

set( PROCYON_PLATFORM_INCLUDE_DIRS
	${PROCYON_PLATFORM_INCLUDE_DIRS}
	${CMAKE_CURRENT_SOURCE_DIR}
	${GLFW_INCLUDE_DIRS}
	PARENT_SCOPE )

set( PROCYON_PLATFORM_DEFINITIONS
	${PROCYON_PLATFORM_DEFINITIONS}
	PARENT_SCOPE )

set( PROCYON_PLATFORM_LIBRARIES
	${PROCYON_PLATFORM_LIBRARIES}
	${GLFW_LIBRARY}
	PARENT_SCOPE )

set( PROCYON_PLATFORM_SOURCES
	${PROCYON_PLATFORM_SOURCES}
	${CMAKE_CURRENT_SOURCE_DIR}/Win32Window.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Win32Window.h
	${CMAKE_CURRENT_SOURCE_DIR}/Win32GLContext.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Win32GLContext.h
	PARENT_SCOPE )
